--- a/countdown/Base.lproj/Main.storyboard
+++ b/countdown/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7525" systemVersion="14D113c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D113c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7516"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,17 +17,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="gradient.png" translatesAutoresizingMaskIntoConstraints="NO" id="WmU-lo-UGu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient.png" translatesAutoresizingMaskIntoConstraints="NO" id="WmU-lo-UGu">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Apple Watch Pre-Order" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E04-En-kZj">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple Watch Pre-Order" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E04-En-kZj">
                                 <rect key="frame" x="179" y="51" width="242" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="IUj-Pc-Q4l"/>
+                                    <constraint firstAttribute="width" constant="242" id="oTp-Gh-JlH"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00 : 00 : 00 : 00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oiw-pX-3ea">
-                                <rect key="frame" x="144" y="390" width="313" height="77"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00 : 00 : 00 : 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oiw-pX-3ea">
+                                <rect key="frame" x="143" y="390" width="314" height="77"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="77" id="bXG-bU-IRR"/>
+                                    <constraint firstAttribute="width" constant="314" id="dvv-Tv-va4"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="40"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -36,7 +44,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="WmU-lo-UGu" secondAttribute="bottom" id="1zU-lw-3LA"/>
+                            <constraint firstItem="E04-En-kZj" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="31" id="2RA-PS-nDj"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="oiw-pX-3ea" secondAttribute="bottom" constant="133" id="WTd-1h-wUf"/>
+                            <constraint firstItem="WmU-lo-UGu" firstAttribute="centerX" secondItem="E04-En-kZj" secondAttribute="centerX" id="d7C-lY-DEW"/>
+                            <constraint firstAttribute="trailing" secondItem="WmU-lo-UGu" secondAttribute="trailing" id="jKK-lt-enn"/>
                             <constraint firstItem="WmU-lo-UGu" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="mz3-fe-7wr"/>
+                            <constraint firstItem="oiw-pX-3ea" firstAttribute="centerX" secondItem="E04-En-kZj" secondAttribute="centerX" id="rMB-ZU-66T"/>
+                            <constraint firstItem="WmU-lo-UGu" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="wHE-OS-28V"/>
                         </constraints>
                     </view>
                     <connections>
